# meg.fm

./: .gitignore
client/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
client/src/: app.html
client/src/lib/: audioProcessor.js
client/src/routes/: +layout.js  +layout.svelte  +page.svelte
client/src/routes/api/audio/: +server.js
content/info/: 0c0650ad-2fea-4f40-9489-c43a9ba5e1f2.yaml  2d030c30-ed7d-4195-b70d-52c61180807f.yaml  2f49b9dd-0765-4b80-82b7-86dff1c119b9.yaml  48f9691a-9a68-48cb-82ef-89c03234048b.yaml  58a0ad9d-5a6a-4fe8-9df7-4adc71bac8f6.yaml  5ae34739-f8fd-4621-ab95-52044854457d.yaml  5e31562f-497a-438c-9c6d-0452b6d98840.yaml  64898b2b-213b-49b4-ae02-6477d3475028.yaml  6d2eaef3-498c-4e83-9144-797c059525be.yaml  b8e46487-7f1a-47bf-9cbf-702d0fbeb488.yaml
content/music/: 0c0650ad-2fea-4f40-9489-c43a9ba5e1f2.opus  2d030c30-ed7d-4195-b70d-52c61180807f.opus  2f49b9dd-0765-4b80-82b7-86dff1c119b9.opus  48f9691a-9a68-48cb-82ef-89c03234048b.opus  58a0ad9d-5a6a-4fe8-9df7-4adc71bac8f6.opus  5ae34739-f8fd-4621-ab95-52044854457d.opus  5e31562f-497a-438c-9c6d-0452b6d98840.opus  64898b2b-213b-49b4-ae02-6477d3475028.opus  6d2eaef3-498c-4e83-9144-797c059525be.opus  b8e46487-7f1a-47bf-9cbf-702d0fbeb488.opus
generator/: Pipfile  artwork.py  descriptions.py  main.py  metadata.py  music.py  pyproject.toml  requirements.txt  utils.py
generator/descriptions/: __init__.py  gpt4.py  llama2.py
generator/descriptions/samples/: descs00.yaml  descs00_out.yaml
generator/metadata/: __init__.py  gpt4.py  llama2.py
generator/models/: llama2.py
generator/scripts/: convert_to_webp.zsh  db_sync_all.py  ensure_coherence.py  modify_info.py  sync.py  sync_server_db.py  sync_to_aws.zsh
generator/systemprompts/artwork/: systemprompt_2023-10-15.txt
generator/systemprompts/descriptions/: genrelist.txt  systemprompt_gpt-4_2023-10-15.txt  systemprompt_llama2_2023-10-19.txt
generator/systemprompts/metadata/: systemprompt_gpt-4_2023-10-15.txt  systemprompt_llama2_2023-10-19.txt
server/: Cargo.toml  app.py
server/src/: audio.rs  auth.rs  aws.rs  main.rs  update_db.rs
