[tool.poetry]
name = "meg-fm-generator"
version = "0.1.0"
description = "AI content generation for meg.fm station"
authors = ["Eli T. Drumm <eli@eli.td>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "meg"}]

[tool.poetry.dependencies]
python = "^3.11"
"ruamel.yaml" = "^0.18.5"
openai = "^0.28.1"
llama-cpp-python = "^0.2.13"
audiocraft = "^1.0.0"
halo = "^0.0.31"
diffusers = "^0.21.4"
transformers = "^4.35.0"
emoji = "^2.8.0"
python-dotenv = "^1.0.0"
pynput = "^1.7.6"
triton = "^2.1.0"
accelerate = "^0.24.1"
fire = "^0.5.0"
mpi4py = "^3.1.5"
unidecode = "^1.3.7"

[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
