[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["http2", "macros", "ws", "headers"] }
axum-extra = { version = "0.8.0", features = ["async-read-body", "cookie", "cookie-private", "cookie-signed", "cookie-key-expansion", "multipart", "protobuf", "query", "typed-routing"] }
axum-tungstenite = "0.3.0"
byteorder = "1.5.0"
bytes = "1.5.0"
chrono = "0.4.31"
dotenv = "0.15.0"
futures = "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
ogg = "0.9.0"
opus = "0.3.0"
sha2 = "0.10.8"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tower = { version = "0.4.13", features = ["full"] }
